using  x_max_endstop (PA1) instead of ^PB14 using y_max_endstop (PA2)  instead of ^PB13 Endstop Zmin is 2mm above the bed

--- a/klipper/printer.cfg
+++ b/klipper/printer.cfg
@@ -24,16 +24,16 @@
 ##  when you compile Klipper for Spider
 ##	Obtain definition by "ls -l /dev/serial/by-id/" then unplug to verify
 ##--------------------------------------------------------------------
-serial: /dev/serial/by-id/usb-Klipper_stm32f446xx_230032000851363131363530-if00
+#serial: /dev/serial/by-id/usb-Klipper_stm32f446xx_230032000851363131363530-if00
 ##	If you want to use the Raspberry uart0 to communicate with Spider, 
 ##  you need to select 'Communication interface' to 'Serial (on USART1 PA10/PA9)' 
 ##  in 'make menuconfig' when you compile klipper and set the serial as below
 ##--------------------------------------------------------------------
-#serial: /dev/ttyAMA0
+serial: /dev/ttyAMA0
 ##--------------------------------------------------------------------
 
 ## Uncomment below if you're using the Raspberry uart0 to communicate with Spider
-#restart_method: command
+restart_method: command
 
 [printer]
 kinematics: corexy
@@ -55,7 +55,7 @@ enable_pin: !PE9
 rotation_distance: 40
 microsteps: 16
 full_steps_per_rotation:200  #set to 400 for 0.9 degree stepper
-endstop_pin: ^PB14
+endstop_pin: ^PA1 
 position_min: 0
 
 ##--------------------------------------------------------------------
@@ -65,8 +65,8 @@ position_min: 0
 #position_max: 250
 
 ##	Uncomment for 300mm build
-#position_endstop: 300
-#position_max: 300
+position_endstop: 300
+position_max: 300
 
 ##	Uncomment for 350mm build
 #position_endstop: 350
@@ -94,7 +94,7 @@ enable_pin: !PD9
 rotation_distance: 40
 microsteps: 16
 full_steps_per_rotation:200  #set to 400 for 0.9 degree stepper
-endstop_pin: ^PB13
+endstop_pin: ^PA2 
 position_min: 0
 ##--------------------------------------------------------------------
 
@@ -103,8 +103,8 @@ position_min: 0
 #position_max: 250
 
 ##	Uncomment for 300mm build
-#position_endstop: 300
-#position_max: 300
+position_endstop: 300
+position_max: 300
 
 ##	Uncomment for 350mm build
 #position_endstop: 350
@@ -128,12 +128,12 @@ stealthchop_threshold: 0
 #   Z Stepper Settings
 #####################################################################
 
-## In Z-MOT Position
+## In E1-MOT Position
 ## Z0 Stepper - Front Left
 [stepper_z]
-step_pin: PD14
-dir_pin: !PD13
-enable_pin: !PD15
+step_pin: PE6
+dir_pin: !PC13
+enable_pin: !PE5
 rotation_distance: 40
 gear_ratio: 80:16
 microsteps: 16
@@ -143,14 +143,14 @@ endstop_pin: ^PA0
 ##  (+) value = endstop above Z0, (-) value = endstop below
 ##	Increasing position_endstop brings nozzle closer to the bed
 ##  After you run Z_ENDSTOP_CALIBRATE, position_endstop will be stored at the very end of your config
-position_endstop: -0.5
+position_endstop: 2
 ##--------------------------------------------------------------------
 
 ##	Uncomment below for 250mm build
 #position_max: 240
 
 ##	Uncomment below for 300mm build
-#position_max: 290
+position_max: 290
 
 ##	Uncomment below for 350mm build
 #position_max: 340
@@ -163,7 +163,7 @@ homing_retract_dist: 3
 
 ##	Make sure to update below for your relevant driver (2208 or 2209)
 [tmc2209 stepper_z]
-uart_pin: PD10
+uart_pin: PC14
 uart_address: 0
 interpolate: True
 run_current: 0.8
@@ -171,56 +171,56 @@ hold_current: 0.8
 sense_resistor: 0.110
 stealthchop_threshold: 0
 
-##	In E1-MOT Position
+##	In E2-MOT Position
 ##	Z1 Stepper - Rear Left
 [stepper_z1]
-step_pin: PE6
-dir_pin: PC13
-enable_pin: !PE5
-rotation_distance: 40
-gear_ratio: 80:16
-microsteps: 16
-
-##	Make sure to update below for your relevant driver (2208 or 2209)
-[tmc2209 stepper_z1]
-uart_pin: PC14
-interpolate: True
-run_current: 0.8
-hold_current: 0.8
-sense_resistor: 0.110
-stealthchop_threshold: 0
-
-##	In E2-MOT Position
-##	Z2 Stepper - Rear Right
-[stepper_z2]
 step_pin: PE2
-dir_pin: !PE4
+dir_pin: PE4
 enable_pin: !PE3
 rotation_distance: 40
 gear_ratio: 80:16
 microsteps: 16
 
 ##	Make sure to update below for your relevant driver (2208 or 2209)
-[tmc2209 stepper_z2]
+[tmc2209 stepper_z1]
 uart_pin: PC15
-interpolate: true
+interpolate: True
 run_current: 0.8
 hold_current: 0.8
 sense_resistor: 0.110
 stealthchop_threshold: 0
 
 ##	In E3-MOT Position
-##	Z3 Stepper - Front Right
-[stepper_z3]
+##	Z2 Stepper - Rear Right
+[stepper_z2]
 step_pin: PD12
-dir_pin: PC4
+dir_pin: !PC4
 enable_pin: !PE8
 rotation_distance: 40
 gear_ratio: 80:16
 microsteps: 16
 
-[tmc2209 stepper_z3]
+##	Make sure to update below for your relevant driver (2208 or 2209)
+[tmc2209 stepper_z2]
 uart_pin: PA15
+interpolate: true
+run_current: 0.8
+hold_current: 0.8
+sense_resistor: 0.110
+stealthchop_threshold: 0
+
+##	In E4-MOT Position
+##	Z3 Stepper - Front Right
+[stepper_z3]
+step_pin: PE1
+dir_pin: PE0
+enable_pin: !PC5
+rotation_distance: 40
+gear_ratio: 80:16
+microsteps: 16
+
+[tmc2209 stepper_z3]
+uart_pin: PD11
 interpolate: true
 run_current: 0.8
 hold_current: 0.8
@@ -253,8 +253,9 @@ filament_diameter: 1.75
 ##      In E0 OUT Position
 heater_pin: PB15
 ##	Validate the following thermistor type to make sure it is correct
-sensor_type: ATC Semitec 104GT-2
-sensor_pin: PC0
+sensor_type: PT1000
+sensor_pin: PC2
+pullup_resistor: 4700
 min_temp: 10
 max_temp: 270
 max_power: 1.0
@@ -285,7 +286,7 @@ stealthchop_threshold: 0
 ##	SSR Pin - In BED OUT position
 heater_pin: PB4
 sensor_type: NTC 100K MGB18-104F39050L32
-sensor_pin: PC3
+sensor_pin: PC0
 ##	Adjust Max Power so your heater doesn't warp your bed
 max_power: 0.6
 min_temp: 0
@@ -294,6 +295,16 @@ control: pid
 pid_kp: 58.437
 pid_ki: 2.347
 pid_kd: 363.769
+
+#######################################
+#### Enclosure Temp Sensor Section ####
+#######################################
+[temperature_sensor enclosure_temp]
+sensor_type: NTC 100K beta 3950
+sensor_pin: PC1
+min_temp: 0
+max_temp: 100
+gcode_id: C
 
 #####################################################################
 #	Probe
@@ -427,15 +438,15 @@ z_hop:10
 	
 ##	Gantry Corners for 300mm Build
 ##	Uncomment for 300mm build
-#gantry_corners:
-#	-60,-10
-#	360,370
+gantry_corners:
+	-60,-10
+	360,370
 ##	Probe points
-#points:
-#	50,25
-#	50,225
-#	250,225
-#	250,25
+points:
+	50,25
+	50,225
+	250,225
+	250,25
 
 ##	Gantry Corners for 350mm Build
 ##	Uncomment for 350mm build
@@ -514,7 +525,7 @@ gcode:
     #G0 X125 Y125 Z30 F3600
     
     ##	Uncomment for 300 build
-    #G0 X150 Y150 Z30 F3600
+    G0 X150 Y150 Z30 F3600
     
     ##	Uncomment for 350mm build
     #G0 X175 Y175 Z30 F3600
