--- a/klipper/printer.cfg
+++ b/klipper/printer.cfg
@@ -353,8 +353,8 @@ samples_tolerance_retries: 3
 #####################################################################
 
 [heater_fan hotend_fan]
-##	Hotend Fan - FAN0 Connector
-pin: PB0
+##	Hotend Fan - FAN1 Connector
+pin: PB1
 max_power: 1.0
 kick_start_time: 0.5
 heater: extruder
@@ -363,21 +363,29 @@ heater_temp: 50.0
 #fan_speed: 1.0
 
 [fan]
-##	Print Cooling Fan - FAN1 Connector
-pin: PB1
-max_power: 0.4
+##	Print Cooling Fan - FAN0 Connector
+pin: PB0
+max_power: 1.0
 kick_start_time: 0.5
 ##	Depending on your fan, you may need to increase this value
 ##	if your fan will not start. Can change cycle_time (increase)
 ##	if your fan is not able to slow down effectively
 off_below: 0.10
 
-[heater_fan controller_fan]
-##	Controller fan - FAN2 Connector
-pin: PB2
+[heater_fan controller_fan board_fan]
+##	Controller fan - LED-R Connector
+pin: PB6
 kick_start_time: 0.5
+off_below: 0.1
 heater: heater_bed
 heater_temp: 45.0
+
+[fan_generic pi_fan]
+##	Controller fan - LED-B Connector
+pin: PB7
+kick_start_time: 0.5
+off_below: 0.1
+fan_speed: 0.5
 
 #[heater_fan exhaust_fan]
 ##  Exhaust fan - In E2 OUT Positon
