Add Pi and Spider temps Fixed reversed probe trigger detection Fixed pin for Pi and Spider Fan Removed display Add requested base fluidd commands

--- a/klipper/printer.cfg
+++ b/klipper/printer.cfg
@@ -306,6 +306,18 @@ min_temp: 0
 max_temp: 100
 gcode_id: C
 
+#######################################
+#### Raspberry pi Temp Sensor ####
+#######################################
+[temperature_sensor raspberry_temp]
+sensor_type: temperature_host
+
+#######################################
+#### Spider pi Temp Sensor ####
+#######################################
+[temperature_sensor spider_temp]
+sensor_type: temperature_mcu
+
 #####################################################################
 #	Probe
 #####################################################################
@@ -315,7 +327,7 @@ gcode_id: C
 ##	This probe is not used for Z height, only Quad Gantry Leveling
 ##	In Z+ position
 ##	If your probe is NO instead of NC, add change pin to ^PA3
-pin: ^!PA3
+pin: ^PA3
 x_offset: 0
 y_offset: 25.0
 z_offset: 0
@@ -373,19 +385,17 @@ kick_start_time: 0.5
 off_below: 0.10
 
 [heater_fan controller_fan board_fan]
-##	Controller fan - LED-R Connector
-pin: PB6
+pin: PB7
 kick_start_time: 0.5
 off_below: 0.1
 heater: heater_bed
 heater_temp: 45.0
 
 [fan_generic pi_fan]
-##	Controller fan - LED-B Connector
-pin: PB7
+pin: PB5
 kick_start_time: 0.5
 off_below: 0.1
-fan_speed: 0.5
+
 
 #[heater_fan exhaust_fan]
 ##  Exhaust fan - In E2 OUT Positon
@@ -481,12 +491,12 @@ max_adjust: 10
 
 #--------------------------------------------------------------------
 
-[display]
+#[display]
 ##	mini12864 LCD Display
 #lcd_type: uc1701
 #cs_pin: PC11
 #a0_pin: PD2
-rst_pin: PC10
+#rst_pin: PC10
 #encoder_pins: ^PC6,^PC7
 #click_pin: ^!PA8
 #contrast: 63
@@ -560,6 +570,83 @@ gcode:
     G0  X125 Y250 F3600            ; park nozzle at rear
     BED_MESH_CLEAR
     
+
+[gcode_macro PAUSE]
+description: Pause the actual running print
+rename_existing: PAUSE_BASE
+# change this if you need more or less extrusion
+variable_extrude: 1.0
+gcode:
+  ##### read E from pause macro #####
+  {% set E = printer["gcode_macro PAUSE"].extrude|float %}
+  ##### set park positon for x and y #####
+  # default is your max posion from your printer.cfg
+  {% set x_park = printer.toolhead.axis_maximum.x|float - 5.0 %}
+  {% set y_park = printer.toolhead.axis_maximum.y|float - 5.0 %}
+  ##### calculate save lift position #####
+  {% set max_z = printer.toolhead.axis_maximum.z|float %}
+  {% set act_z = printer.toolhead.position.z|float %}
+  {% if act_z < (max_z - 2.0) %}
+      {% set z_safe = 2.0 %}
+  {% else %}
+      {% set z_safe = max_z - act_z %}
+  {% endif %}
+  ##### end of definitions #####
+  PAUSE_BASE
+  G91
+  {% if printer.extruder.can_extrude|lower == 'true' %}
+    G1 E-{E} F2100
+  {% else %}
+    {action_respond_info("Extruder not hot enough")}
+  {% endif %}
+  {% if "xyz" in printer.toolhead.homed_axes %}
+    G1 Z{z_safe} F900
+    G90
+    G1 X{x_park} Y{y_park} F6000
+  {% else %}
+    {action_respond_info("Printer not homed")}
+  {% endif %} 
+
+
+[gcode_macro RESUME]
+description: Resume the actual running print
+rename_existing: RESUME_BASE
+gcode:
+  ##### read E from pause macro #####
+  {% set E = printer["gcode_macro PAUSE"].extrude|float %}
+  #### get VELOCITY parameter if specified ####
+  {% if 'VELOCITY' in params|upper %}
+    {% set get_params = ('VELOCITY=' + params.VELOCITY)  %}
+  {%else %}
+    {% set get_params = "" %}
+  {% endif %}
+  ##### end of definitions #####
+  {% if printer.extruder.can_extrude|lower == 'true' %}
+    G91
+    G1 E{E} F2100
+  {% else %}
+    {action_respond_info("Extruder not hot enough")}
+  {% endif %}  
+  RESUME_BASE {get_params}
+
+
+[gcode_macro CANCEL_PRINT]
+description: Cancel the actual running print
+rename_existing: CANCEL_PRINT_BASE
+gcode:
+  TURN_OFF_HEATERS
+  CANCEL_PRINT_BASE
+  
+###################################################################
+# Fluidd
+###################################################################
+[virtual_sdcard]
+path: ~/gcode_files
+
+[display_status]
+[pause_resume]
+
+
 ## 	Thermistor Types
 ##   "EPCOS 100K B57560G104F"
 ##   "ATC Semitec 104GT-2"
@@ -568,3 +655,6 @@ gcode:
 ##   "NTC 100K MGB18-104F39050L32" (Keenovo Heater Pad)
 ##   "AD595"
 ##   "PT100 INA826"
+
+
+
