set z endstop via Z_endstop_calibrate pid tune extruder and bed fix spider_fan that can't handle heater_fan AND controller_fan at the same time. Used controller_fan as it embeds functionnalities of heater_fan

--- a/klipper/printer.cfg
+++ b/klipper/printer.cfg
@@ -143,7 +143,7 @@ endstop_pin: ^PA0
 ##  (+) value = endstop above Z0, (-) value = endstop below
 ##	Increasing position_endstop brings nozzle closer to the bed
 ##  After you run Z_ENDSTOP_CALIBRATE, position_endstop will be stored at the very end of your config
-position_endstop: 2
+#position_endstop: 4.285
 ##--------------------------------------------------------------------
 
 ##	Uncomment below for 250mm build
@@ -260,10 +260,10 @@ min_temp: 10
 max_temp: 270
 max_power: 1.0
 min_extrude_temp: 170
-control = pid
-pid_kp = 26.213
-pid_ki = 1.304
-pid_kd = 131.721
+#control = pid
+#pid_kp = 26.213
+#pid_ki = 1.304
+#pid_kd = 131.721
 ##	Try to keep pressure_advance below 1.0
 pressure_advance: 0.05
 ##	Default is 0.040, leave stock
@@ -291,10 +291,10 @@ sensor_pin: PC0
 max_power: 0.6
 min_temp: 0
 max_temp: 120
-control: pid
-pid_kp: 58.437
-pid_ki: 2.347
-pid_kd: 363.769
+#control: pid
+#pid_kp: 58.437
+#pid_ki: 2.347
+#pid_kd: 363.769
 
 #######################################
 #### Enclosure Temp Sensor Section ####
@@ -384,17 +384,19 @@ kick_start_time: 0.5
 ##	if your fan is not able to slow down effectively
 off_below: 0.10
 
-[heater_fan controller_fan board_fan]
+[controller_fan spider_fan]
 pin: PB7
 kick_start_time: 0.5
+max_power:0.7
 off_below: 0.1
-heater: heater_bed
-heater_temp: 45.0
+heater: extruder
 
-[fan_generic pi_fan]
+[controller_fan pi_fan]
 pin: PB5
 kick_start_time: 0.5
 off_below: 0.1
+max_power: 0.5
+heater: heater_bed
 
 
 #[heater_fan exhaust_fan]
@@ -431,7 +433,7 @@ timeout: 1800
 ##	Update -10,-10 to the XY coordinates of your endstop pin 
 ##	(such as 157,305) after going through Z Endstop Pin
 ##	Location Definition step.
-home_xy_position:-10,-10
+home_xy_position:205.70,300
 speed:100
 z_hop:10
    
@@ -552,8 +554,47 @@ gcode:
 [gcode_macro PRINT_START]
 #   Use PRINT_START for the slicer starting script - please customise for your slicer of choice
 gcode:
-    G32                            ; home all axes
-    G1 Z20 F3000                   ; move nozzle away from bed 
+  {% set BED = params.BED|default(100)|float %}
+  {% set EXTRUDER = params.EXTRUDER|default(240)|float %}
+  {% set SOAK = params.SOAK|default(0)|float %}
+  M117 Starting Warmup
+
+  #if the bed is already at the correct target temp, we assume no heat soak is necessary.
+  {% if (SOAK|int) <= 0 or (printer.heater_bed.temperature >= (BED|int - 20)) %}
+   
+  {% else %}
+    M117 Heating for Soak
+    M190 S{BED}
+    M117 Starting Soak
+    {% for timer in range( SOAK|int,0,-1) %}
+      #we cycle once a minute, so we can send an update to keep octoprint happy, rather than just sleeping for the entire soak
+      M117 Soak: {timer|int}m remaining
+      M105
+      G4 P60000
+          
+   {% endfor %}
+   M117 Soak Complete
+  {% endif %}
+    
+  M190 S{BED}
+  M109 S{EXTRUDER}
+
+  G28
+  QUAD_GANTRY_LEVEL
+  G28
+     
+  M300 S1000 P500 ; chirp
+  M117 Starting Purge Line
+  G1 Y2 X40 F4000.0 ; go outside print area
+  G1 Z0.0 F300.0; 
+  G1 X230 Y2.1 Z0.28 F1500.0 E15 ;Draw the first line
+  G1 X230 Y2.4  Z0.28 F5000.0 ;Move to side a little
+  G1 X50 Y2.4 Z0.28 F1500.0 E30 ;Draw the second line
+  G92 E0.0
+
+  M300 S1000 P500 ; chirp
+  M117 Starting Print
+
 
 [gcode_macro PRINT_END]
 #   Use PRINT_END for the slicer ending script - please customise for your slicer of choice
@@ -567,7 +608,7 @@ gcode:
     M107                           ; turn off fan
     G1 Z2 F3000                    ; move nozzle up 2mm
     G90                            ; absolute positioning
-    G0  X125 Y250 F3600            ; park nozzle at rear
+    G0  X0 Y300 F3600            ; park nozzle at rear
     BED_MESH_CLEAR
     
 
@@ -656,5 +697,20 @@ path: ~/gcode_files
 ##   "AD595"
 ##   "PT100 INA826"
 
-
-
+#*# <---------------------- SAVE_CONFIG ---------------------->
+#*# DO NOT EDIT THIS BLOCK OR BELOW. The contents are auto-generated.
+#*#
+#*# [stepper_z]
+#*# position_endstop = 2.492
+#*#
+#*# [heater_bed]
+#*# control = pid
+#*# pid_kp = 40.273
+#*# pid_ki = 1.483
+#*# pid_kd = 273.350
+#*#
+#*# [extruder]
+#*# control = pid
+#*# pid_kp = 25.766
+#*# pid_ki = 1.311
+#*# pid_kd = 126.575
