Reduce bed heater to avoid warping the bed plate Add bed mesh increase timeout to be able to heat soak for 90minutes remove purge line due to damage to flex plate rename g32 to home_qgl because g32 means docking add Force_soak to be able to Soak even if bed heater is already on

--- a/klipper/printer.cfg
+++ b/klipper/printer.cfg
@@ -288,9 +288,9 @@ heater_pin: PB4
 sensor_type: NTC 100K MGB18-104F39050L32
 sensor_pin: PC0
 ##	Adjust Max Power so your heater doesn't warp your bed
-max_power: 0.6
+max_power: 0.5
 min_temp: 0
-max_temp: 120
+max_temp: 115
 #control: pid
 #pid_kp: 58.437
 #pid_ki: 2.347
@@ -337,6 +337,18 @@ samples_result: median
 sample_retract_dist: 3.0
 samples_tolerance: 0.006
 samples_tolerance_retries: 3
+
+[bed_mesh]
+speed: 300
+horizontal_move_z: 2
+mesh_min: 40, 40
+mesh_max: 260,260
+fade_start: 0.6
+fade_end: 10.0
+probe_count: 5,5
+algorithm: bicubic
+relative_reference_index: 12
+
 
 #####################################################################
 #	Bltouch
@@ -426,7 +438,7 @@ heater: heater_bed
 #####################################################################
 
 [idle_timeout]
-timeout: 1800
+timeout: 5400 # 90 minutes
 
 [safe_z_home]
 ##	XY Location of the Z Endstop Switch
@@ -533,7 +545,7 @@ max_adjust: 10
 #	Macros
 #####################################################################
 
-[gcode_macro G32]
+[gcode_macro HOME_QGL]
 gcode:
     BED_MESH_CLEAR
     G28
@@ -557,44 +569,46 @@ gcode:
   {% set BED = params.BED|default(100)|float %}
   {% set EXTRUDER = params.EXTRUDER|default(240)|float %}
   {% set SOAK = params.SOAK|default(0)|float %}
+  {% set FORCE_SOAK = params.FORCE_SOAK|default(0)|float %}
+
   M117 Starting Warmup
 
   #if the bed is already at the correct target temp, we assume no heat soak is necessary.
-  {% if (SOAK|int) <= 0 or (printer.heater_bed.temperature >= (BED|int - 20)) %}
+  {% if ((SOAK|int) >= 0 and (printer.heater_bed.temperature <= (BED|int - 10))) or (FORCE_SOAK|int) == 1 %}
    
-  {% else %}
     M117 Heating for Soak
+
     M190 S{BED}
+    
     M117 Starting Soak
     {% for timer in range( SOAK|int,0,-1) %}
       #we cycle once a minute, so we can send an update to keep octoprint happy, rather than just sleeping for the entire soak
       M117 Soak: {timer|int}m remaining
+      
       M105
       G4 P60000
           
-   {% endfor %}
-   M117 Soak Complete
+    {% endfor %}
+  M117 Soak Complete
   {% endif %}
     
   M190 S{BED}
   M109 S{EXTRUDER}
+  M106 S125 #start part cooling to avoid melting
 
-  G28
-  QUAD_GANTRY_LEVEL
-  G28
+  HOME_QGL
+  BED_MESH_CALIBRATE
      
-  M300 S1000 P500 ; chirp
-  M117 Starting Purge Line
-  G1 Y2 X40 F4000.0 ; go outside print area
-  G1 Z0.0 F300.0; 
-  G1 X230 Y2.1 Z0.28 F1500.0 E15 ;Draw the first line
-  G1 X230 Y2.4  Z0.28 F5000.0 ;Move to side a little
-  G1 X50 Y2.4 Z0.28 F1500.0 E30 ;Draw the second line
-  G92 E0.0
+  # M117 Starting Purge Line
+  # M118 E1 Starting Purge Line
+  # G1 Y2 X40 F4000.0 ; go outside print area
+  # G1 Z0.0 F300.0; 
+  # G1 X230 Y2.1 Z0.28 F1500.0 E15 ;Draw the first line
+  # G1 X230 Y2.4  Z0.28 F5000.0 ;Move to side a little
+  # G1 X50 Y2.4 Z0.28 F1500.0 E30 ;Draw the second line
+  # G92 E0.0
 
-  M300 S1000 P500 ; chirp
   M117 Starting Print
-
 
 [gcode_macro PRINT_END]
 #   Use PRINT_END for the slicer ending script - please customise for your slicer of choice
@@ -701,7 +715,7 @@ path: ~/gcode_files
 #*# DO NOT EDIT THIS BLOCK OR BELOW. The contents are auto-generated.
 #*#
 #*# [stepper_z]
-#*# position_endstop = 2.492
+#*# position_endstop = 2.780
 #*#
 #*# [heater_bed]
 #*# control = pid
@@ -714,3 +728,22 @@ path: ~/gcode_files
 #*# pid_kp = 25.766
 #*# pid_ki = 1.311
 #*# pid_kd = 126.575
+#*#
+#*# [bed_mesh default]
+#*# version = 1
+#*# points =
+#*# 	-0.010000, -0.000000, -0.025000, -0.025000, 0.030000
+#*# 	0.017500, 0.007500, -0.030000, -0.050000, -0.017500
+#*# 	0.035000, 0.035000, 0.000000, -0.037500, -0.012500
+#*# 	0.040000, 0.037500, 0.015000, -0.010000, 0.015000
+#*# 	0.025000, 0.025000, 0.012500, 0.000000, 0.032500
+#*# tension = 0.2
+#*# min_x = 40.0
+#*# algo = bicubic
+#*# y_count = 5
+#*# mesh_y_pps = 2
+#*# min_y = 40.0
+#*# x_count = 5
+#*# max_y = 260.0
+#*# mesh_x_pps = 2
+#*# max_x = 260.0
