start part fan cooling before hotend to avoid melting duct add 2 files for better code management

--- a/klipper/printer.cfg
+++ b/klipper/printer.cfg
@@ -593,8 +593,8 @@ gcode:
   {% endif %}
     
   M190 S{BED}
-  M109 S{EXTRUDER}
   M106 S125 #start part cooling to avoid melting
+  M109 S{EXTRUDER}
 
   HOME_QGL
   BED_MESH_CALIBRATE
@@ -700,6 +700,8 @@ path: ~/gcode_files
 
 [display_status]
 [pause_resume]
+[include client.cfg]
+[include client_macros.cfg]
 
 
 ## 	Thermistor Types
