--- a/klipper/client_macros.cfg
+++ b/klipper/client_macros.cfg
@@ -1,3 +1,153 @@
+[gcode_macro HOME_QGL]
+gcode:
+    BED_MESH_CLEAR
+    G28
+    QUAD_GANTRY_LEVEL
+    G28
+    ##	Uncomment for for your size printer:
+    #--------------------------------------------------------------------
+    ##	Uncomment for 250mm build
+    #G0 X125 Y125 Z30 F3600
+    
+    ##	Uncomment for 300 build
+    G0 X150 Y150 Z30 F3600
+    
+    ##	Uncomment for 350mm build
+    #G0 X175 Y175 Z30 F3600
+    #--------------------------------------------------------------------
+   
+[gcode_macro PRINT_START]
+#   Use PRINT_START for the slicer starting script - please customise for your slicer of choice
+gcode:
+  {% set BED = params.BED|default(100)|float %}
+  {% set EXTRUDER = params.EXTRUDER|default(240)|float %}
+  {% set SOAK = params.SOAK|default(0)|float %}
+  {% set FORCE_SOAK = params.FORCE_SOAK|default(0)|float %}
+
+  M117 Starting Warmup
+
+  #if the bed is already at the correct target temp, we assume no heat soak is necessary.
+  {% if ((SOAK|int) >= 0 and (printer.heater_bed.temperature <= (BED|int - 10))) or (FORCE_SOAK|int) == 1 %}
+   
+    M117 Heating for Soak
+    M190 S{BED}
+    
+    M117 Starting Soak
+    {% for timer in range( SOAK|int,0,-1) %}
+      #we cycle once a minute, so we can send an update to keep octoprint happy, rather than just sleeping for the entire soak
+      M117 Soak: {timer|int}m remaining
+      
+      M105
+      G4 P60000
+          
+    {% endfor %}
+  M117 Soak Complete
+  {% endif %}
+    
+  M190 S{BED}
+  M106 S125 #start part cooling to avoid melting
+  M109 S{EXTRUDER}
+
+  HOME_QGL
+  BED_MESH_CALIBRATE
+     
+  # M117 Starting Purge Line
+  # M118 E1 Starting Purge Line
+  # G1 Y2 X40 F4000.0 ; go outside print area
+  # G1 Z0.0 F300.0; 
+  # G1 X230 Y2.1 Z0.28 F1500.0 E15 ;Draw the first line
+  # G1 X230 Y2.4  Z0.28 F5000.0 ;Move to side a little
+  # G1 X50 Y2.4 Z0.28 F1500.0 E30 ;Draw the second line
+  # G92 E0.0
+
+  M117 Starting Print
+
+[gcode_macro PRINT_END]
+#   Use PRINT_END for the slicer ending script - please customise for your slicer of choice
+gcode:
+    M400                           ; wait for buffer to clear
+    G92 E0                         ; zero the extruder
+    G1 E-10.0 F3600                ; retract filament
+    G91                            ; relative positioning
+    G0 Z1.00 X20.0 Y20.0 F20000    ; move nozzle to remove stringing
+    TURN_OFF_HEATERS
+    M107                           ; turn off fan
+    G1 Z2 F3000                    ; move nozzle up 2mm
+    G90                            ; absolute positioning
+    G0  X0 Y300 F3600            ; park nozzle at rear
+    BED_MESH_CLEAR
+    
+
+[gcode_macro PAUSE]
+description: Pause the actual running print
+rename_existing: PAUSE_BASE
+# change this if you need more or less extrusion
+variable_extrude: 1.0
+gcode:
+  ##### read E from pause macro #####
+  {% set E = printer["gcode_macro PAUSE"].extrude|float %}
+  ##### set park positon for x and y #####
+  # default is your max posion from your printer.cfg
+  {% set x_park = printer.toolhead.axis_maximum.x|float - 5.0 %}
+  {% set y_park = printer.toolhead.axis_maximum.y|float - 5.0 %}
+  ##### calculate save lift position #####
+  {% set max_z = printer.toolhead.axis_maximum.z|float %}
+  {% set act_z = printer.toolhead.position.z|float %}
+  {% if act_z < (max_z - 2.0) %}
+      {% set z_safe = 2.0 %}
+  {% else %}
+      {% set z_safe = max_z - act_z %}
+  {% endif %}
+  ##### end of definitions #####
+  PAUSE_BASE
+  G91
+  {% if printer.extruder.can_extrude|lower == 'true' %}
+    G1 E-{E} F2100
+  {% else %}
+    {action_respond_info("Extruder not hot enough")}
+  {% endif %}
+  {% if "xyz" in printer.toolhead.homed_axes %}
+    G1 Z{z_safe} F900
+    G90
+    G1 X{x_park} Y{y_park} F6000
+  {% else %}
+    {action_respond_info("Printer not homed")}
+  {% endif %} 
+
+
+[gcode_macro RESUME]
+description: Resume the actual running print
+rename_existing: RESUME_BASE
+gcode:
+  ##### read E from pause macro #####
+  {% set E = printer["gcode_macro PAUSE"].extrude|float %}
+  #### get VELOCITY parameter if specified ####
+  {% if 'VELOCITY' in params|upper %}
+    {% set get_params = ('VELOCITY=' + params.VELOCITY)  %}
+  {%else %}
+    {% set get_params = "" %}
+  {% endif %}
+  ##### end of definitions #####
+  {% if printer.extruder.can_extrude|lower == 'true' %}
+    G91
+    G1 E{E} F2100
+  {% else %}
+    {action_respond_info("Extruder not hot enough")}
+  {% endif %}  
+  RESUME_BASE {get_params}
+
+
+[gcode_macro CANCEL_PRINT]
+description: Cancel the actual running print
+rename_existing: CANCEL_PRINT_BASE
+gcode:
+  TURN_OFF_HEATERS
+  CANCEL_PRINT_BASE
+
+#####################################################################
+#  BED PLATE
+#####################################################################
+
 [gcode_macro Textured_Plate_Offset]
 description: Offset for Textured Bed Plate
 #   Use PRINT_END for the slicer ending script - please customise for your slicer of choice
