add klicky cfg, but it seems that there's some duplicate code between docking mecanism. - PROBE_ACCURACY uses the docking of _ATTACH_PROBE/_DOCK_PROBE in homing.cfg - ATTACH_PROBE and DOCK_PROBE_UNLOCK use the one from klicky_probe.cfg

--- a/klipper/printer.cfg
+++ b/klipper/printer.cfg
@@ -13,11 +13,13 @@
 ###################################################################
 [virtual_sdcard]
 path: ~/gcode_files
-
 [display_status]
 [pause_resume]
 [include client.cfg]
 [include client_macros.cfg]
+[include klicky_probe.cfg]
+[include homing.cfg]
+[include probing.cfg]
 
 ###################################################################
 #  MCU
@@ -324,38 +326,6 @@ sensor_type: temperature_host
 sensor_type: temperature_mcu
 
 #####################################################################
-#	Probe
-#####################################################################
-
-[probe]
-##	Inductive Probe - If you use this section , please comment the [bltouch] section
-##	This probe is not used for Z height, only Quad Gantry Leveling
-##	In Z+ position
-##	If your probe is NO instead of NC, add change pin to ^PA3
-pin: ^PA3
-x_offset: 0
-y_offset: 25.0
-z_offset: 0
-speed: 10.0
-samples: 3
-samples_result: median
-sample_retract_dist: 3.0
-samples_tolerance: 0.006
-samples_tolerance_retries: 3
-
-[bed_mesh]
-speed: 300
-horizontal_move_z: 2
-mesh_min: 40, 40
-mesh_max: 260,260
-fade_start: 0.6
-fade_end: 10.0
-probe_count: 5,5
-algorithm: bicubic
-relative_reference_index: 12
-
-
-#####################################################################
 #	Bltouch
 #####################################################################
 
@@ -445,14 +415,14 @@ heater: extruder
 [idle_timeout]
 timeout: 5400 # 90 minutes
 
-[safe_z_home]
+#[safe_z_home]
 ##	XY Location of the Z Endstop Switch
 ##	Update -10,-10 to the XY coordinates of your endstop pin 
 ##	(such as 157,305) after going through Z Endstop Pin
 ##	Location Definition step.
-home_xy_position:205.70,300
-speed:100
-z_hop:10
+#home_xy_position:205.90,300
+#speed:100
+#z_hop:10
    
 [quad_gantry_level]
 ##	Use QUAD_GANTRY_LEVEL to level a gantry.
