move higher for QGL to avoid probe to hit the Z switch

--- a/klipper/printer.cfg
+++ b/klipper/printer.cfg
@@ -8,6 +8,8 @@
 
 ## Voron Design VORON2 250/300/350mm Spider TMC2209 UART config
 
+## File upload to printer scp -r klipper/* username@ip:~/klipper_config
+
 ###################################################################
 #  Fluidd
 ###################################################################
@@ -17,7 +19,6 @@ path: ~/gcode_files
 [pause_resume]
 [include client.cfg]
 [include client_macros.cfg]
-[include klicky_probe.cfg]
 [include homing.cfg]
 [include probing.cfg]
 
