--- a/klipper/printer.cfg
+++ b/klipper/printer.cfg
@@ -16,8 +16,11 @@ path: ~/gcode_files
 
 [display_status]
 [pause_resume]
+
 [include client.cfg]
 [include client_macros.cfg]
+[include probing.cfg]
+[include homing.cfg]
 
 ###################################################################
 #  MCU
@@ -324,38 +327,6 @@ sensor_type: temperature_host
 sensor_type: temperature_mcu
 
 #####################################################################
-#	Probe
-#####################################################################
-
-[probe]
-##	Inductive Probe - If you use this section , please comment the [bltouch] section
-##	This probe is not used for Z height, only Quad Gantry Leveling
-##	In Z+ position
-##	If your probe is NO instead of NC, add change pin to ^PA3
-pin: ^PA3
-x_offset: 0
-y_offset: 25.0
-z_offset: 0
-speed: 10.0
-samples: 3
-samples_result: median
-sample_retract_dist: 3.0
-samples_tolerance: 0.006
-samples_tolerance_retries: 3
-
-[bed_mesh]
-speed: 300
-horizontal_move_z: 2
-mesh_min: 40, 40
-mesh_max: 260,260
-fade_start: 0.6
-fade_end: 10.0
-probe_count: 5,5
-algorithm: bicubic
-relative_reference_index: 12
-
-
-#####################################################################
 #	Bltouch
 #####################################################################
 
@@ -450,7 +421,7 @@ timeout: 5400 # 90 minutes
 ##	Update -10,-10 to the XY coordinates of your endstop pin 
 ##	(such as 157,305) after going through Z Endstop Pin
 ##	Location Definition step.
-home_xy_position:205.70,300
+home_xy_position:205.90,310
 speed:100
 z_hop:10
    
