--- a/klipper/client_macros.cfg
+++ b/klipper/client_macros.cfg
@@ -50,17 +50,18 @@ gcode:
 
   HOME_QGL
   BED_MESH_CALIBRATE
-     
-  # M117 Starting Purge Line
-  # M118 E1 Starting Purge Line
-  # G1 Y2 X40 F4000.0 ; go outside print area
-  # G1 Z0.0 F300.0; 
-  # G1 X230 Y2.1 Z0.28 F1500.0 E15 ;Draw the first line
-  # G1 X230 Y2.4  Z0.28 F5000.0 ;Move to side a little
-  # G1 X50 Y2.4 Z0.28 F1500.0 E30 ;Draw the second line
-  # G92 E0.0
-
+    
   M117 Starting Print
+
+### Purge Line example
+# M117 Starting Purge Line
+# M118 E1 Starting Purge Line
+# G1 Y2 X40 F4000.0 ; go outside print area
+# G1 Z0.0 F300.0; 
+# G1 X230 Y2.1 Z0.28 F1500.0 E15 ;Draw the first line
+# G1 X230 Y2.4  Z0.28 F5000.0 ;Move to side a little
+# G1 X50 Y2.4 Z0.28 F1500.0 E30 ;Draw the second line
+# G92 E0.0
 
 [gcode_macro PRINT_END]
 #   Use PRINT_END for the slicer ending script - please customise for your slicer of choice
@@ -159,3 +160,15 @@ description: Offset for Textured Bed Plate
 #   Use PRINT_END for the slicer ending script - please customise for your slicer of choice
 gcode:
     SET_GCODE_OFFSET Z=0 MOVE=1
+
+#####################################################################
+#  OTHER
+#####################################################################
+[gcode_macro PARKCENTER]
+gcode:
+    {% set Z = params.Z|default(30)|float %}
+    SAVE_GCODE_STATE NAME=PARKCENTER_state
+    _CG28                          ; Home if not already homed
+    G90                            ; absolute positioning
+    G0 X150 Y150 Z{Z} F12000       ; move to center
+    RESTORE_GCODE_STATE NAME=PARKCENTER_state
