--- a/klipper/macros.cfg
+++ b/klipper/macros.cfg
@@ -1,5 +1,5 @@
 #####################################################################
-#  Macros
+#  Macros # not included yet
 #####################################################################
 [gcode_macro PRINT_START]
 gcode:
@@ -37,11 +37,3 @@ gcode:
     G1 X174 F6000                  ; move away from intro line
     M117
 
-[gcode_macro PARKCENTER]
-gcode:
-    {% set Z = params.Z|default(30)|float %}
-    SAVE_GCODE_STATE NAME=PARKCENTER_state
-    _CG28                          ; Home if not already homed
-    G90                            ; absolute positioning
-    G0 X150 Y150 Z{Z} F12000       ; move to center
-    RESTORE_GCODE_STATE NAME=PARKCENTER_state
