--- a/klipper/probing.cfg
+++ b/klipper/probing.cfg
@@ -42,7 +42,7 @@ points:
 	250,225
 	250,25
 speed: 300
-horizontal_move_z: 10 #5
+horizontal_move_z: 20 #5
 retries: 5
 retry_tolerance: 0.007
 max_adjust: 10
@@ -52,19 +52,19 @@ max_adjust: 10
 #####################################################################
 [z_calibration]
 # position on z-endstop for nozzle probing
-probe_nozzle_x: 206 
-probe_nozzle_y: 300
+probe_nozzle_x: 205.9 
+probe_nozzle_y: 310
 # position on z-endstop for switch probing
-probe_switch_x: 211
-probe_switch_y: 281
+probe_switch_x: 202.1
+probe_switch_y: 291
 # position on bed for print surface probing
 # !!! this must be the relative reference point of the mesh, if using one !!!
 probe_bed_x: 150
 probe_bed_y: 150
-switch_offset: 0.470 # 0.670 ; smaller is more away from bed!
+switch_offset: 0.3 #0.470 # 0.670 ; smaller is more away from bed!
 max_deviation: 0.8
 speed: 300
-clearance: 10 #5
+clearance: 20 #5
 #samples: 5
 #samples_tolerance: 0.01 #0.006
 #samples_tolerance_retries: 10
@@ -184,11 +184,9 @@ gcode:
     SAVE_GCODE_STATE NAME=_ATTACH_PROBE
     SET_GCODE_OFFSET Z=0.0         ; reset offset - will be restored
     G90                            ; absolute positioning
-    G0 X252.5 Y285 Z10 F12000      ; move to mag-probe
-    G0 Z1.0 F540                   ; move down to mag-probe
-    G0 Y300 F6000                  ; move in
+    G0 X4 Y285 Z20 F12000      ; move to mag-probe
+    G0 Y310 F6000                  ; move in
     G0 Y285 F6000                  ; move out
-    G0 Z10 F540                    ; move up
     RESTORE_GCODE_STATE NAME=_ATTACH_PROBE
 
 [gcode_macro _DOCK_PROBE]
@@ -196,10 +194,10 @@ gcode:
     SAVE_GCODE_STATE NAME=_DOCK_PROBE
     SET_GCODE_OFFSET Z=0.0         ; reset offset - will be restored
     G90                            ; absolute positioning
-    G0 X252.5 Y285 Z10 F12000      ; move to mag-probe
-    G0 Z1.0 F540                   ; move down to mag-probe
-    G0 Y300 F6000                  ; move in
-    G0 Z10 F540                    ; move up
+    G0 X4 Y285 Z20 F12000      ; move to mag-probe
+    G0 Y310 F6000                  ; move in
+    G0 X60 F6000                    ; move side to force detach
+    G0 Y285 F6000                    ; move out
     RESTORE_GCODE_STATE NAME=_DOCK_PROBE
 
 [gcode_macro BED_MESH_CALIBRATE]
