add tip to push to printer

--- a/klipper/printer.cfg
+++ b/klipper/printer.cfg
@@ -8,6 +8,8 @@
 
 ## Voron Design VORON2 250/300/350mm Spider TMC2209 UART config
 
+# push all to printer -> scp -r klipper/* username@ip:~/klipper_config
+
 ###################################################################
 #  Fluidd
 ###################################################################
