--- a/klipper/client_macros.cfg
+++ b/klipper/client_macros.cfg
@@ -43,25 +43,19 @@ gcode:
     {% endfor %}
   M117 Soak Complete
   {% endif %}
-    
-  M190 S{BED}
-  M106 S125 #start part cooling to avoid melting
-  M109 S{EXTRUDER}
 
-  HOME_QGL
-  BED_MESH_CALIBRATE
-    
+  BED_MESH_CLEAR                 ; clear mesh
+  _CG28                          ; Home the printer
+  G90                            ; Use absolute coordinates
+  PARKCENTER                     ; Move to center
+  QUAD_GANTRY_LEVEL CALIBRATE=false ; QGL without Z calibration (done later)
+  M117 Heating..
+  M106 S255                      ; set print fan to full speed to avoid melting fan ducts
+  M109 S{extruder_temp}          ; Set and wait for nozzle to reach temperature
+  clean_nozzle                   ; clean nozzle ; TODO not implemented yet
+  CALIBRATE_Z
+  #BED_MESH_PROFILE LOAD=default  ; load mesh ; TODO Probe bed for new mesh
   M117 Starting Print
-
-### Purge Line example
-# M117 Starting Purge Line
-# M118 E1 Starting Purge Line
-# G1 Y2 X40 F4000.0 ; go outside print area
-# G1 Z0.0 F300.0; 
-# G1 X230 Y2.1 Z0.28 F1500.0 E15 ;Draw the first line
-# G1 X230 Y2.4  Z0.28 F5000.0 ;Move to side a little
-# G1 X50 Y2.4 Z0.28 F1500.0 E30 ;Draw the second line
-# G92 E0.0
 
 [gcode_macro PRINT_END]
 #   Use PRINT_END for the slicer ending script - please customise for your slicer of choice
@@ -75,7 +69,7 @@ gcode:
     M107                           ; turn off fan
     G1 Z2 F3000                    ; move nozzle up 2mm
     G90                            ; absolute positioning
-    G0  X0 Y300 F3600            ; park nozzle at rear
+    G0 X300 Y310 F3600            ; park nozzle at rear
     BED_MESH_CLEAR
     
 
@@ -145,25 +139,11 @@ gcode:
   TURN_OFF_HEATERS
   CANCEL_PRINT_BASE
 
-#####################################################################
-#  BED PLATE
-#####################################################################
-
-[gcode_macro Textured_Plate_Offset]
-description: Offset for Textured Bed Plate
-#   Use PRINT_END for the slicer ending script - please customise for your slicer of choice
-gcode:
-    SET_GCODE_OFFSET Z_ADJUST=-0.290 MOVE=1
-
-[gcode_macro Zero_Offset]
-description: Offset for Textured Bed Plate
-#   Use PRINT_END for the slicer ending script - please customise for your slicer of choice
-gcode:
-    SET_GCODE_OFFSET Z=0 MOVE=1
 
 #####################################################################
 #  OTHER
 #####################################################################
+
 [gcode_macro PARKCENTER]
 gcode:
     {% set Z = params.Z|default(30)|float %}
