--- a/klipper/macros.cfg
+++ b/klipper/macros.cfg
@@ -1,5 +1,5 @@
 #####################################################################
-#  Macros # not included yet
+#  Macros # To merge into my print start if necessary
 #####################################################################
 [gcode_macro PRINT_START]
 gcode:
