cleanup uncomment for build X

--- a/klipper/printer.cfg
+++ b/klipper/printer.cfg
@@ -66,21 +66,9 @@ full_steps_per_rotation:400  #set to 200 for 1.8 degree stepper
 endstop_pin: ^PA1 
 position_min: 0
 
-##--------------------------------------------------------------------
+position_endstop: 300 # 300mm build
+position_max: 300     # 300mm build
 
-##	Uncomment below for 250mm build
-#position_endstop: 250
-#position_max: 250
-
-##	Uncomment for 300mm build
-position_endstop: 300
-position_max: 300
-
-##	Uncomment for 350mm build
-#position_endstop: 350
-#position_max: 350
-
-##--------------------------------------------------------------------
 homing_speed: 25   #Max 100
 homing_retract_dist: 5
 homing_positive_dir: true
@@ -104,21 +92,10 @@ microsteps: 16
 full_steps_per_rotation:400  #set to 200 for 1.8 degree stepper
 endstop_pin: ^PA2 
 position_min: 0
-##--------------------------------------------------------------------
 
-##	Uncomment for 250mm build
-#position_endstop: 250
-#position_max: 250
+position_endstop: 310 # 300mm build
+position_max: 310     # 300mm build
 
-##	Uncomment for 300mm build
-position_endstop: 310
-position_max: 310
-
-##	Uncomment for 350mm build
-#position_endstop: 350
-#position_max: 350
-
-##--------------------------------------------------------------------
 homing_speed: 25  #Max 100
 homing_retract_dist: 5
 homing_positive_dir: true
@@ -152,18 +129,8 @@ endstop_pin: ^PA0
 ##	Increasing position_endstop brings nozzle closer to the bed
 ##  After you run Z_ENDSTOP_CALIBRATE, position_endstop will be stored at the very end of your config
 #position_endstop: 4.285
-##--------------------------------------------------------------------
 
-##	Uncomment below for 250mm build
-#position_max: 240
-
-##	Uncomment below for 300mm build
-position_max: 290
-
-##	Uncomment below for 350mm build
-#position_max: 340
-
-##--------------------------------------------------------------------
+position_max: 290 # 300mm build
 position_min: -5
 homing_speed: 8
 second_homing_speed: 3
