--- a/klipper/probing.cfg
+++ b/klipper/probing.cfg
@@ -62,13 +62,13 @@ probe_switch_y: 291
 probe_bed_x: 150
 probe_bed_y: 150
 switch_offset: 0.4 #0.470 # 0.670 ; smaller is more away from bed!
-max_deviation: 1.3
+max_deviation: 0.8
 speed: 300
-clearance: 20 #5
-#samples: 5
-#samples_tolerance: 0.01 #0.006
-#samples_tolerance_retries: 10
-#samples_result: median
+clearance: 15 #5
+samples: 4
+samples_tolerance: 0.007
+samples_tolerance_retries: 10
+samples_result: median
 #position_min: -5
 #lift_speed: 5 #8
 #probing_speed: 7 #10
