fix wrong variable, increase horizontal move for probe

--- a/klipper/client_macros.cfg
+++ b/klipper/client_macros.cfg
@@ -42,7 +42,7 @@ gcode:
   QUAD_GANTRY_LEVEL CALIBRATE=false ; QGL without Z calibration (done later)
   M117 Heating..
   M106 S255                      ; set print fan to full speed to avoid melting fan ducts
-  M109 S{extruder_temp}          ; Set and wait for nozzle to reach temperature
+  M109 S{EXTRUDER}          ; Set and wait for nozzle to reach temperature
   clean_nozzle                   ; clean nozzle ; TODO not implemented yet
   CALIBRATE_Z
   #BED_MESH_PROFILE LOAD=default  ; load mesh ; TODO Probe bed for new mesh
