add nozzle scruber with personnal variables (bucket for a 250 in a 300 build)

--- a/klipper/printer.cfg
+++ b/klipper/printer.cfg
@@ -21,6 +21,7 @@ path: ~/gcode_files
 
 [include client.cfg]
 [include client_macros.cfg]
+[include nozzle_scrub.cfg]
 [include probing.cfg]
 [include homing.cfg]
 
