add back double bucket ramdomization modify purge position, find it easier to read like this modify end position to avoid grabing the klicky magnet, above a bucket if it oozes

--- a/klipper/nozzle_scrub.cfg
+++ b/klipper/nozzle_scrub.cfg
@@ -115,13 +115,13 @@ variable_brush_depth:       0
 #variable_bucket_left_width:    42
 
 ## For V2.4 300mm build, uncomment below
-variable_bucket_left_width:    40
+variable_bucket_left_width:    42
 
 ## For V2.4 350mm build, uncomment below
 #variable_bucket_left_width:    92   
 
 # These values are defaulted from bucket geometry in CAD (rear left location). Change only if you're using a custom bucket.
-variable_bucket_right_width:   10            
+variable_bucket_right_width:   42            
 variable_bucket_gap:           22	
 
 # For V1.8, you may need to measure where your bucket start is and input into bucket_start. Otherwise, a value of 0 is for a default
@@ -158,7 +158,7 @@ gcode:
       {% if enable_purge %}
 
          ### Randomly select left or right bin for purge. 0 = left, 1 = right
-         SET_GCODE_VARIABLE MACRO=clean_nozzle VARIABLE=bucket_pos VALUE=0
+         SET_GCODE_VARIABLE MACRO=clean_nozzle VARIABLE=bucket_pos VALUE={(range(2) | random)}
 
          ### Raise Z for travel.
          G1 Z{brush_top + clearance_z} F{prep_spd_z}
@@ -171,7 +171,11 @@ gcode:
          {% endif %}
 
          ### Position for purge. Randomly selects middle of left or right bucket. It references from the middle of the left bucket.
-         G1 X{bucket_start + (bucket_left_width / (2 - bucket_pos)) + (bucket_pos * bucket_gap) + (bucket_pos * (bucket_right_width / 2))}
+         {% if bucket_pos == 0 %}
+            G1 X{bucket_start + (bucket_left_width / 3)}
+         {% else %}
+            G1 X{bucket_start + bucket_left_width + bucket_gap + (bucket_right_width * 2 / 3)}
+         {% endif %}
 
          ### Perform purge if the temp is up to min temp. If not, it will skip and continue executing rest of macro. Small retract after
          ### purging to minimize any persistent oozing at 5x purge_spd. G4 dwell is in milliseconds, hence * 1000 in formula.
@@ -208,7 +212,7 @@ gcode:
       ## Clear from area.
       M117 Cleaned!
       G1 Z{brush_top + clearance_z} F{prep_spd_z}
-      G1 X{bucket_left_width / 4} F{prep_spd_xy} 
+      G1 X{bucket_start + (bucket_left_width / 3)} F{prep_spd_xy} 
 
       ## Restore the gcode state to how it was before the macro.
       RESTORE_GCODE_STATE NAME=clean_nozzle
