add bed_mesh_calibrate before printing

--- a/klipper/client_macros.cfg
+++ b/klipper/client_macros.cfg
@@ -43,9 +43,11 @@ gcode:
   M117 Heating..
   M106 S255                      ; set print fan to full speed to avoid melting fan ducts
   M109 S{EXTRUDER}          ; Set and wait for nozzle to reach temperature
-  clean_nozzle                   ; clean nozzle ; TODO not implemented yet
+  clean_nozzle                   ; clean nozzle
   CALIBRATE_Z
-  #BED_MESH_PROFILE LOAD=default  ; load mesh ; TODO Probe bed for new mesh
+  BED_MESH_CALIBRATE
+  
+  clean_nozzle
   M117 Starting Print
 
 [gcode_macro PRINT_END]
