--- a/klipper/probing.cfg
+++ b/klipper/probing.cfg
@@ -1,5 +1,5 @@
 #####################################################################
-# 	Probe demo
+# 	Probe 
 #####################################################################
 [probe]
 pin: ^PA3
