--- a/klipper/probing.cfg
+++ b/klipper/probing.cfg
@@ -42,7 +42,7 @@ points:
 	250,225
 	250,25
 speed: 300
-horizontal_move_z: 15 #5
+horizontal_move_z: 10 #5
 retries: 5
 retry_tolerance: 0.007
 max_adjust: 10
@@ -64,7 +64,7 @@ probe_bed_y: 150
 switch_offset: 0.4 #0.470 # 0.670 ; smaller is more away from bed!
 max_deviation: 0.8
 speed: 300
-clearance: 15 #5
+clearance: 10 #5
 samples: 4
 samples_tolerance: 0.007
 samples_tolerance_retries: 10
@@ -88,6 +88,7 @@ gcode:
     # reduce accel current
     _SET_ACC VAL=HOME
     SECURE_ATTACH_PROBE
+    PARKCENTER
     BASE_QUAD_GANTRY_LEVEL
     # ability to disable z calibration - it's done later in PRINT_START
     {% if params.CALIBRATE|default('true') == 'true' %}
