--- a/klipper/nozzle_scrub.cfg
+++ b/klipper/nozzle_scrub.cfg
@@ -37,20 +37,17 @@
 # further below on how to set your XY position.
 variable_location_bucket_rear:      True
 
-# If you want the purging routine in your bucket enabled, set to True (and vice versa).
-variable_enable_purge:              True
-
 # These parameters define your filament purging. The retract variable is used to retract right after purging to prevent unnecessary
 # oozing. Some filament are particularly oozy and may continue to ooze out of the nozzle for a second or two after retracting. The
 # ooze dwell variable makes allowance for this. Update as necessary. If you decided to not enable purge, you can ignore this section.
-variable_purge_len:            30	         ; Amount of filament, in mm, to purge.
+variable_purge_len:            20	         ; Amount of filament, in mm, to purge.
 variable_purge_spd:           150	         ; Speed, in mm/min, of the purge.
-variable_purge_temp_min:      240	         ; Minimum nozzle temperature to permit a purge. Otherwise, purge will not occur.
-variable_purge_ret:             3            ; Retract length, in mm, after purging to prevent slight oozing. Adjust as necessary.
-variable_ooze_dwell:            3            ; Dwell/wait time, in seconds, after purging and retracting.
+variable_purge_temp_min:      235	         ; Minimum nozzle temperature to permit a purge. Otherwise, purge will not occur.
+variable_purge_ret:             5            ; Retract length, in mm, after purging to prevent slight oozing. Adjust as necessary.
+variable_ooze_dwell:            10            ; Dwell/wait time, in seconds, after purging and retracting.
 
 # Adjust this so that your nozzle scrubs within the brush. Currently defaulted to be a lot higher for safety. Be careful not to go too low!
-variable_brush_top:            3.1 
+variable_brush_top:            3.3
 
 # These parameters define your scrubbing, travel speeds, safe z clearance and how many times you want to wipe. Update as necessary. Wipe 
 # direction is randomized based off whether the left or right bucket is randomly selected in the purge & scrubbing routine.
@@ -140,8 +137,11 @@ variable_bucket_start: 26
 
 # Placeholder. The variable will later be set to contain, at random, a number representing the left or right bucket.
 variable_bucket_pos:            1	        
-
+description: clean_nozzle PURGE=true/false
 gcode:
+   # If you want the purging routine in your bucket enabled, set to True (and vice versa).
+   {% set variable_enable_purge= params.PURGE|default('false') == 'true' %}
+
    # First, check if the axes are homed.
    {% if "xyz" in printer.toolhead.homed_axes %}
 
@@ -155,7 +155,8 @@ gcode:
       {% set Ry = printer.configfile.config["stepper_y"]["position_max"]|float %}
 
       ## Check if user enabled purge option or not.
-      {% if enable_purge %}
+      M118 Is purge enabled? {variable_enable_purge}
+      {% if variable_enable_purge %}
 
          ### Randomly select left or right bin for purge. 0 = left, 1 = right
          SET_GCODE_VARIABLE MACRO=clean_nozzle VARIABLE=bucket_pos VALUE={(range(2) | random)}
@@ -174,12 +175,17 @@ gcode:
          {% if bucket_pos == 0 %}
             G1 X{bucket_start + (bucket_left_width / 3)}
          {% else %}
-            G1 X{bucket_start + bucket_left_width + bucket_gap + (bucket_right_width * 2 / 3)}
+            G1 X{bucket_start + bucket_left_width + bucket_gap + (bucket_right_width * 1 / 2)}
          {% endif %}
+
+         G1 Z{brush_top}
 
          ### Perform purge if the temp is up to min temp. If not, it will skip and continue executing rest of macro. Small retract after
          ### purging to minimize any persistent oozing at 5x purge_spd. G4 dwell is in milliseconds, hence * 1000 in formula.
-         {% if printer.extruder.temperature >= purge_temp_min %}
+         {% set canPurge= printer.extruder.temperature >= purge_temp_min %}
+         M118 Temperature allow purging? {canPurge}
+         {% if canPurge %}
+            M118 Purging...
             M83      ; relative mode
             G1 E{purge_len} F{purge_spd}
             G1 E-{purge_ret} F{purge_spd * 5}
