add purge_length and purge_temp in nozzle scrubber

--- a/klipper/client_macros.cfg
+++ b/klipper/client_macros.cfg
@@ -14,6 +14,7 @@ gcode:
   {% set EXTRUDER = params.EXTRUDER|default(240)|float %}
   {% set SOAK = params.SOAK|default(0)|float %}
   {% set FORCE_SOAK = params.FORCE_SOAK|default(0)|float %}
+  {% set PURGE_TEMP = params.PURGE_TEMP|default(EXTRUDER)|float %}
 
   M117 Starting Warmup
 
@@ -48,7 +49,7 @@ gcode:
   CALIBRATE_Z
   BED_MESH_CALIBRATE
   
-  clean_nozzle PURGE=true
+  clean_nozzle PURGE=true PURGE_LENGTH=15 PURGE_TEMP=PURGE_TEMP
   M117 Starting Print
 
 [gcode_macro PRINT_END]
