wait above bucket

--- a/klipper/probing.cfg
+++ b/klipper/probing.cfg
@@ -172,6 +172,8 @@ gcode:
     G0 X4 Y285 Z20 F12000      ; move to mag-probe
     G0 Y310 F6000                  ; move in
     G0 Y285 F6000                  ; move out
+    G0 X40 F6000                    ; move to X bucket
+    G0 Y310 F6000                   ; move to Y bucket
     RESTORE_GCODE_STATE NAME=_ATTACH_PROBE
 
 [gcode_macro _DOCK_PROBE]
@@ -182,7 +184,7 @@ gcode:
     G0 X4 Y285 Z20 F12000      ; move to mag-probe
     G0 Y310 F6000                  ; move in
     G0 X60 F6000                    ; move side to force detach
-    G0 Y285 F6000                    ; move out
+    G0 X40 F6000                    ; move above bucket
     RESTORE_GCODE_STATE NAME=_DOCK_PROBE
 
 [gcode_macro BED_MESH_CALIBRATE]
